2001-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* popup.c: Added #include <config.h>.
	
2001-03-06  Miguel de Icaza  <miguel@ximian.com>

	* GNOME_GtkHTML_Editor.xml: Adjust to new layout (Insert of
	menu/Component/Insert, menu/Insert/Component). 

2001-02-19    <rodo@ximian.com>

	* Makefile.am: fix idl generating includes

2001-02-12  Radek Doulik  <rodo@ximian.com>

	* image.c (insert_or_apply): fix image width/height and percentage
	(image_properties): properly recognize file:// and file:

2001-02-07  Kjartan Maraas  <kmaraas@gnome.org>

	* GNOME_GtkHTML_Editor.oaf.in: Added this. Not hooked up yet.
	
2001-01-24  Larry Ewing  <lewing@ximian.com>

	* persist-file-impl.c (impl_save): cast function to fix warning.

2001-01-24  Radek Doulik  <rodo@helixcode.com>

	* main.c: as below

	* test-html-editor-control.c: use ORB from oaf_init in bonobo_init

2001-01-23  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am (EXTRA_DIST): added tt.xpm to EXTRA_DIST

2001-01-23  Michael Meeks  <michael@helixcode.com>

	* GNOME_GtkHTML_Editor.xml: put Insert menu inside
	/menu/Component instead of overriding this placeholder with an
	item.

2001-01-23  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c: added TT check button (toggles fixed font style),

2001-01-17  Larry Ewing  <lewing@helixcode.com>

	* toolbar.c: change the tooltip wording slightly to match gnumeric
	more closely.

	* GNOME_GtkHTML_Editor.xml: fix up redo wording.

2001-01-16  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c (color_changed): use gtk_html_set_color instead of
	engine method

	* text.c (text_apply_cb): use gtk_html_set_font_style rather than
	engine method
	(text_apply_cb): likewise for set_color

2001-01-12  Radek Doulik  <rodo@helixcode.com>

	* test-html-editor-control.c (container_create): move test
	control == NULL

2001-01-08  Radek Doulik  <rodo@helixcode.com>

	* engine.c (par_is_empty): fixed, it was returning wrong value for
	par without slaves
